src/test_compilateur/tst/error/hello_wolrd__wrong.c
int main()
  printf("Hello Wolrd\n");
